# Mycelium

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.sandbox-base  Dockerfile.ui  LICENSE  Makefile  README.md  SECURITY.md  __init__.py  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docker-build.yml  ui-build.yml
agents/: __init__.py  base.py  catalog.py  catalog.toml  registry.py  spec.py
agents/builtin/: __init__.py  _llm_step.py  coder.py  echo.py  fetcher.py  researcher.py  reviewer.py  shadow_debugger.py
agents/prompts/: coder.md  fetcher.md  researcher.md  reviewer.md  shadow_debugger.md  system_base.md
bus/: __init__.py  channels.py  envelope.py  publisher.py  reply_tracker.py  subscriber.py
core/: __init__.py  context_budget.py  daemon.py  exceptions.py  kernel.py  lifecycle.py  logging.py  scheduler.py  settings.py
core/api/: app.py  deps.py  exceptions.py
core/llm/: anthropic_provider.py  provider.py  token_counter.py  voyage_embed.py
core/workers/: __init__.py  arq_worker.py
db/: __init__.py  connection.py  models.py  seed.py
db/migrations/: env.py
db/repos/: agents.py  comms.py  experiments.py  runs.py  tasks.py
deploy/: ct-readme.md
deploy/systemd/: mycelium.service
docs/: architecture.md  bus-protocol.md  kernel-loop.md  memory-model.md  sandbox-security.md
docs/adr/: 0001-arq-over-celery.md  0002-anthropic-default.md  0003-pgvector-single-postgres.md  0004-root-mapped-layout.md  0005-branching-and-commits.md
memory/: chunker.py  cold.py  eviction.py  hot.py  warm.py
sandbox/: __init__.py  builder.py  exec.py  filesystem.py  manager.py  resource_caps.py
scripts/: bootstrap_dev.sh  mypy_check.sh  reset_dev.sh  smoke.py
tests/: conftest.py
tests/fixtures/: canned_envelopes.json
tests/integration/: test_bus_roundtrip.py  test_memory_search.py  test_register_dispatch_flow.py  test_sandbox_exec.py
tests/unit/: test_builtin_agents.py  test_catalog.py  test_chunker.py  test_context_budget.py  test_db_models.py  test_envelope.py  test_kernel.py  test_reply_tracker.py  test_scheduler.py  test_subagent_spawn.py  test_worker_completion_reply.py
ui/: eslint.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
ui/app/: globals.css  layout.tsx  page.tsx
ui/components/: AgentCard.tsx  CommsStream.tsx  DashboardClient.tsx  SettingsClient.tsx  TaskFeed.tsx  ThoughtBubble.tsx
ui/lib/: api.ts  types.ts  (+1 more)
(+19 files in other folders)
